Project_EKS/dev/Network policy/ns1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: devapp
  namespace: dev1
spec:
  containers:
    - name: devcon
      image: karty11/mediplus:v1
      imagePullPolicy: Always
      ports:
        - containerPort: 80
          name: apache
          protocol: TCP
      resources:
        requests:
          memory: "200Mi"
          cpu: "200m"
        limits:
          memory: "300Mi"
          cpu: "400m"
