Project_EKS/dev/Network policy/allowfromport.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-only-port
  namespace: dev1
spec:
  podsSelector: {}
  policyTypes:
    -  Ingress
    -  Egress
  ingress:
    -  ports:
         - protocol: TCP
           port: 53
         - protocol: TCP
           port: 80

  egress:
    - ports:
        - protocol: TCP
          port: 53
