Project_EKS/dev/Network policy/allowns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-specific-namespace
  namespace: dev1
spec:
  podsSelector: {}
  policyTypes:
    -  Ingress
    -  Egress
  ingress:
  -  from:
       -  namespaceSelector:
            matchLabels:
               kubernetes.io/metadata.name: dev2
