Project_EKS/dev/Network policy/allowsepcificpod.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-specific-pod
  namespace: dev1
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: devpod2
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: dev2
      ports:
        - port: 80
          protocol: TCP
